<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.FormSignaler.FullscreenContainer"
    tools:context=".UI.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout android:orientation="vertical"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/function_t"
            android:id="@+id/functionCaption"/>
        <Spinner
            android:id="@+id/functionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawSelectorOnTop="true"
            android:entries="@array/functionNames"
            />

        <fragment
            android:id="@+id/mainfragment"
            android:name="com.shokker.formsignaler.UI.FunctionFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

    </LinearLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/settingsFloatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_settings_24"
                android:layout_gravity="end"
                android:onClick="onSettingsOkButton"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/playFloatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:scaleType="fitCenter"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_play_arrow_24"
                android:onClick="onStartClick"
                />




</FrameLayout>