<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SettingsDialog"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample_rate_caption" />

            <Spinner
                android:id="@+id/spinnerSampleRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/frameRates" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buffer_size_caption" />

            <EditText
                android:id="@+id/editTextBufferSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="1000" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swStartOnPlug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_on_headphones_plug" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swStopOnUnplug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_on_headphones_unplug" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swStopOnClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_on_app_close" android:visibility="invisible"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="bottom">

                <Button
                    android:id="@+id/okSettingsButton"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@android:string/ok"
                    android:layout_toLeftOf="@+id/secondView"/>


                <View
                    android:id="@+id/secondView"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:id="@+id/cancelSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/secondView"
                    android:text="@android:string/cancel" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>